--- a/hackedin/app/src/main/res/layout/activity_main.xml
+++ b/hackedin/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_margin="10dp"
+    android:orientation="vertical">
+    <EditText
+        android:layout_width="match_parent"
+        android:id="@+id/input_signup_email"
+        android:hint="Enter Email"
+        android:layout_height="40dp"
+        android:layout_margin="10dp"/>
 
-    <TextView
+    <EditText
+        android:layout_width="match_parent"
+        android:id="@+id/input_signup_password"
+        android:hint="Enter Password"
+        android:layout_height="40dp"
+        android:layout_margin="10dp"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:id="@+id/register_button"
+        android:text="Register"
+        android:layout_height="40dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="5dp"/>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_height="40dp"
+            android:text="Already a user?" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/login_activity"
+            android:clickable="true"
+            android:textColor="#3260a8"
+            android:layout_marginLeft="10dp"
+            android:text="LOGIN"/>
+    </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
