--- a/hackedin/app/src/main/res/layout/activity_edit.xml
+++ b/hackedin/app/src/main/res/layout/activity_edit.xml
@@ -8,11 +8,19 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/toContent"
         android:hint="To"
         android:layout_marginBottom="8dp"/>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/ccContent"
+        android:hint="CC"
+        android:layout_marginBottom="8dp"/>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/subContent"
         android:hint="Subject"
         android:layout_marginBottom="8dp"/>
     <Spinner
@@ -20,7 +28,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawSelectorOnTop="true"
-        android:entries="@array/scheduler"
         android:layout_marginBottom="8dp"
         android:background="@android:drawable/btn_dropdown"
         android:spinnerMode="dropdown">
@@ -29,6 +36,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/bodyContent"
         android:hint="Mail Body"
         android:gravity="left"
         android:layout_marginBottom="8dp"/>
