--- a/hackedin/app/src/main/res/values/themes.xml
+++ b/hackedin/app/src/main/res/values/themes.xml
@@ -15,8 +15,8 @@
     </style>
 
     <style name="Theme.Hackedin.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">true</item>
+        <item name="windowNoTitle">false</item>
     </style>
 
     <style name="Theme.Hackedin.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
