--- a/hackedin/app/src/main/res/layout-v21/activity_home.xml
+++ b/hackedin/app/src/main/res/layout-v21/activity_home.xml
@@ -5,8 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".home">
-
-
+<ActionMenuView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"/>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
