--- a/hackedin/app/src/main/res/layout/activity_home.xml
+++ b/hackedin/app/src/main/res/layout/activity_home.xml
@@ -6,6 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".home">
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
