--- a/hackedin/app/src/main/res/layout/list_item.xml
+++ b/hackedin/app/src/main/res/layout/list_item.xml
@@ -18,7 +18,8 @@
         android:textSize="18dp"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
-        android:text="Hello" />
+        android:id="@+id/listTo"
+        android:text="to" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -26,21 +27,45 @@
         android:textSize="17dp"
         android:fontFamily="sans-serif"
         android:textColor="@color/black"
-        android:text="hi" />
+        android:id="@+id/listSub"
+        android:text="Subject" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
         android:textColor="@color/black"
-        android:text="Helllloooooooooooooooooooo..." />
+        android:id="@+id/listEmailType"
+        android:text="emailType" />
     </LinearLayout>
-
+    <LinearLayout
+        android:layout_width="0sp"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
     <TextView
         android:layout_width="wrap_content"
         android:layout_weight="1"
+        android:id="@+id/listDate"
         android:textColor="@color/black"
         android:layout_height="wrap_content"
-        android:text="15/06/2020"
+        android:text="Date"
         android:gravity="end" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_weight="1"
+        android:id="@+id/listTime"
+        android:textColor="@color/black"
+        android:layout_height="wrap_content"
+        android:text="Time"
+        android:gravity="end" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_weight="1"
+        android:id="@+id/listCount"
+        android:textColor="@color/black"
+        android:layout_height="wrap_content"
+        android:text="Counter"
+        android:gravity="end" />
+    </LinearLayout>
 </LinearLayout>
