--- a/hackedin/app/src/main/res/layout/list_item.xml
+++ b/hackedin/app/src/main/res/layout/list_item.xml
@@ -42,6 +42,7 @@
         android:layout_width="0sp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
+        android:gravity="right"
         android:orientation="vertical">
     <TextView
         android:layout_width="wrap_content"
