--- a/hackedin/app/src/main/res/layout/activity_login.xml
+++ b/hackedin/app/src/main/res/layout/activity_login.xml
@@ -1,28 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="80dp"
+    android:background="@mipmap/signup2"
     android:orientation="vertical">
-    <EditText
+
+    <TextView
         android:layout_width="match_parent"
+        android:textStyle="bold"
+        android:text="LOGIN"
+        android:textSize="40sp"
+        android:layout_marginBottom="20dp"
+        android:gravity="center"
+        android:layout_height="wrap_content"/>
+    <EditText
+        android:layout_width="250dp"
         android:id="@+id/input_login_email"
+        android:layout_gravity="center"
         android:hint="Enter Email"
         android:layout_height="40dp"
+        android:inputType="textEmailAddress"
         android:layout_margin="10dp"/>
 
     <EditText
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:id="@+id/input_login_password"
+        android:layout_gravity="center"
         android:hint="Enter Password"
+        android:inputType="textPassword"
         android:layout_height="40dp"
         android:layout_margin="10dp"/>
+
     <Button
-        android:layout_width="wrap_content"
         android:id="@+id/login_button"
-        android:text="Submit"
-        android:layout_height="40dp"
-        android:layout_margin="10dp"/>
+        android:layout_width="100dp"
+        android:layout_marginTop="10dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:text="Login"
+        android:textStyle="italic"
+        app:backgroundTint="#2196F3" />
 
 </LinearLayout>
