--- a/hackedin/app/src/main/res/layout/activity_main.xml
+++ b/hackedin/app/src/main/res/layout/activity_main.xml
@@ -2,43 +2,64 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingTop="80dp"
+    android:background="@mipmap/signup2"
     android:orientation="vertical">
-    <EditText
+    <TextView
         android:layout_width="match_parent"
+        android:textStyle="bold"
+        android:text="SIGN UP"
+        android:textSize="40sp"
+        android:layout_marginBottom="20dp"
+        android:gravity="center"
+        android:layout_height="wrap_content"/>
+    <EditText
+        android:layout_width="250dp"
         android:id="@+id/input_signup_email"
+        android:layout_gravity="center"
         android:hint="Enter Email"
         android:layout_height="40dp"
+        android:inputType="textEmailAddress"
         android:layout_margin="10dp"/>
 
     <EditText
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:id="@+id/input_signup_password"
+        android:layout_gravity="center"
         android:hint="Enter Password"
+        android:inputType="textPassword"
         android:layout_height="40dp"
         android:layout_margin="10dp"/>
+
     <Button
-        android:layout_width="wrap_content"
         android:id="@+id/register_button"
-        android:text="Register"
-        android:layout_height="40dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="5dp"/>
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:text="Sign Up"
+        android:layout_marginBottom="10dp"
+        android:textStyle="italic"
+        app:backgroundTint="#2196F3" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
             android:id="@+id/textView"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="6"
+            android:gravity="right"
             android:layout_marginLeft="10dp"
             android:layout_height="40dp"
             android:text="Already a user?" />
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/login_activity"
+            android:layout_weight="5"
             android:clickable="true"
             android:textColor="#3260a8"
             android:layout_marginLeft="10dp"
