--- a/hackedin/app/src/main/res/layout/list_item.xml
+++ b/hackedin/app/src/main/res/layout/list_item.xml
@@ -1,72 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Layout for a single list item in the list of pets -->
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="95dp"
+    android:background="#83C1F8"
     android:orientation="horizontal"
-    android:padding="20dp">
+    android:paddingLeft="16dp"
+    android:paddingTop="8dp"
+    android:paddingRight="16dp"
+    android:paddingBottom="8dp">
 
     <LinearLayout
         android:layout_width="0sp"
-        android:layout_weight="2"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="3"
         android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:textSize="18dp"
-        android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:id="@+id/listTo"
-        android:text="to" />
+        <TextView
+            android:id="@+id/listTo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Tooo"
+            android:textColor="@color/black"
+            android:textSize="18dp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="17dp"
-        android:fontFamily="sans-serif"
-        android:textColor="@color/black"
-        android:id="@+id/listSub"
-        android:text="Subject" />
+        <TextView
+            android:id="@+id/listSub"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="sans-serif"
+            android:text="Subject"
+            android:textColor="@color/black"
+            android:textSize="16dp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif"
-        android:textColor="@color/black"
-        android:id="@+id/listEmailType"
-        android:text="emailType" />
+        <TextView
+            android:id="@+id/listEmailType"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="sans-serif"
+            android:text="emailType"
+            android:textColor="@color/black" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="0sp"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:layout_height="wrap_content"
         android:gravity="right"
         android:orientation="vertical">
-    <TextView
-        android:layout_width="wrap_content"
 
-        android:id="@+id/listDate"
-        android:textColor="@color/black"
-        android:layout_height="wrap_content"
-        android:text="Date"
-         />
-    <TextView
-        android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/listDate"
+            android:layout_width="wrap_content"
+            android:paddingTop="6dp"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:text="Date"
+            android:textColor="@color/black"
+            android:textStyle="bold" />
 
-        android:id="@+id/listTime"
-        android:textColor="@color/black"
-        android:layout_height="wrap_content"
-        android:text="Time"
-        />
-    <TextView
-        android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/listTime"
+            android:layout_marginTop="3dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:textStyle="bold"
+            android:text="Time"
+            android:textColor="@color/black" />
 
-        android:id="@+id/listCount"
-        android:textColor="@color/black"
-        android:layout_height="wrap_content"
-        android:text="Counter"
-      />
+        <TextView
+            android:id="@+id/listCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:text="count"
+            android:textColor="@color/black" />
     </LinearLayout>
 </LinearLayout>
