--- a/hackedin/app/src/main/res/layout/list_item.xml
+++ b/hackedin/app/src/main/res/layout/list_item.xml
@@ -22,6 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Tooo"
+            android:singleLine="true"
             android:textColor="@color/black"
             android:textSize="18dp"
             android:textStyle="bold" />
@@ -31,6 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:singleLine="true"
             android:fontFamily="sans-serif"
             android:text="Subject"
             android:textColor="@color/black"
@@ -42,6 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:singleLine="true"
             android:fontFamily="sans-serif"
             android:text="emailType"
             android:textColor="@color/black" />
