--- a/hackedin/app/src/main/res/layout-v21/activity_home.xml
+++ b/hackedin/app/src/main/res/layout-v21/activity_home.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F8F7FF"
     tools:context=".home">
 
 
@@ -14,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="#9AC6ED"
+        android:background="#7C7CD3"
         android:id="@+id/listContainer"/>
 
 
