--- a/hackedin/app/src/main/res/layout/activity_home.xml
+++ b/hackedin/app/src/main/res/layout/activity_home.xml
@@ -6,14 +6,14 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#83C1F0"
+    android:background="#F8F7FF"
     tools:context=".home">
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="#9AC6ED"
+        android:background="#B8B8FF"
         android:drawSelectorOnTop="true"
         android:id="@+id/listContainer"/>
 
